Fix invisible status icon without offline mode

--- a/src/goupile/client/goupile.css
+++ b/src/goupile/client/goupile.css
@@ -97,13 +97,6 @@ body.busy > * { display: none !important; }
     color: inherit;
     text-decoration: none;
 }
-.gp_toolbar button.icon {
-    width: 36px;
-    min-width: 36px;
-    background-image: url('icons.png');
-    background-repeat: no-repeat;
-    background-size: 220px 44px;
-}
 .gp_toolbar button::-moz-focus-inner { border: 0; }
 .gp_toolbar button:focus { outline: 0; }
 .gp_toolbar button:not(.active):not(:disabled):hover { background-color: #376cb5; }
@@ -192,6 +185,15 @@ body.busy > * { display: none !important; }
         background: DodgerBlue;
         color: white;
     }
+}
+
+#gp_status {
+    width: 36px;
+    height: 100%;
+    min-width: 36px;
+    background-image: url('icons.png');
+    background-repeat: no-repeat;
+    background-size: 220px 44px;
 }
 
 /* -------------------- Panels -------------------- */
